# qr_image_reader_aurora

./: .metadata  README.md  pubspec.yaml
aurora/: CMakeLists.txt  qr_image_reader_aurora_plugin.cpp
aurora/3rdpatry/psdk_4/libtiff/aarch64/: libtiff.so.5.7.0
aurora/3rdpatry/psdk_4/libtiff/armv7l/: libtiff.so.5.7.0
aurora/3rdpatry/psdk_5/libtiff/include/libtiff/: tiffconf.h
aurora/3rdpatry/psdk_5/libtiff/x86_64/: libtiff.so.5.7.0
aurora/cimg/: CImg.h
aurora/include/qr_image_reader_aurora/: globals.h  qr_image_reader_aurora_plugin.h
example/: README.md  pubspec.yaml
example/assets/: qr_code_tiff.tiff
example/aurora/: CMakeLists.txt
example/aurora/desktop/: com.example.qr_image_reader_aurora_example.desktop
example/aurora/rpm/: com.example.qr_image_reader_aurora_example.spec
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: qr_image_reader_aurora.dart  qr_image_reader_aurora_method_channel.dart  qr_image_reader_aurora_platform_interface.dart
